--- a/src/style.css
+++ b/src/style.css
@@ -117,6 +117,15 @@ button:hover {
     cursor: none; /* Hide cursor */
 }
 
+.loading-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.5rem;
+    color: var(--font-color);
+}
+
 /* Responsive */
 @media screen and (max-width: 600px) {
     .logo {
